--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -32,12 +32,26 @@ body {
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
-    display: block; /* Makes it a block element */
-    width: fit-content; /* Adjusts width to fit text */
-    margin: 5px auto 0; /* Centers the button below the text */
+    display: block; 
+    width: fit-content;
+    margin: 5px auto 0; 
     border-radius: 5px; 
   }
 
 a:hover {
     background-color: darkblue;
 }
+.search{
+    text-align: center;
+}
+table {
+    width: 100%;
+  }
+  .tc {
+    margin: auto;
+    width: 20%;
+    border: 3px solid green;
+    padding: 10px;
+    text-align: center;
+  }
+  
